@@ -31,6 +31,7 @@ plugins {
     id 'idea'
     id 'jacoco'
     id 'com.diffplug.spotless' version '6.25.0'
+    id 'me.champeau.jmh' version '0.7.2'
 }
 
 apply plugin: 'opensearch.opensearchplugin'
@@ -196,6 +197,15 @@ task allTests {
     dependsOn test, internalClusterTest, yamlRestTest
     group = 'Verification'
     description = 'Runs all tests (Unit, Integration, and YAML)'
+}
+
+jmh {
+    fork = 3
+    warmupIterations = 5
+    iterations = 10
+    jvmArgs = ['--enable-preview', '--enable-native-access=ALL-UNNAMED', '-XX:+UseZGC']
+    resultFormat = 'JSON'
+    resultsFile = project.file("${project.buildDir}/reports/jmh/results.json")
 }
 
 spotless {
